--- a/changelog/index.html
+++ b/changelog/index.html
@@ -8,12 +8,12 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>changelog | Яeversed Ƨiddhartha</title>
 <meta name="title" content="changelog" />
-<meta name="description" content=" Changelog 2020-10-05  replaced text font with IBM Plex Mono &lt;span&quot;&gt;(commit) - reverted to old (Verdana) font for the website title&lt;span&quot;&gt;(commit)  2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  " />
+<meta name="description" content=" Changelog 2020-10-05  replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title(commit)  2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  " />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="changelog" />
-<meta property="og:description" content=" Changelog 2020-10-05  replaced text font with IBM Plex Mono &lt;span&quot;&gt;(commit) - reverted to old (Verdana) font for the website title&lt;span&quot;&gt;(commit)  2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  " />
+<meta property="og:description" content=" Changelog 2020-10-05  replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title(commit)  2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/changelog/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
@@ -22,12 +22,12 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="changelog"/>
-<meta name="twitter:description" content=" Changelog 2020-10-05  replaced text font with IBM Plex Mono &lt;span&quot;&gt;(commit) - reverted to old (Verdana) font for the website title&lt;span&quot;&gt;(commit)  2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  "/>
+<meta name="twitter:description" content=" Changelog 2020-10-05  replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title(commit)  2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  "/>
 
 
 
 <meta itemprop="name" content="changelog">
-<meta itemprop="description" content=" Changelog 2020-10-05  replaced text font with IBM Plex Mono &lt;span&quot;&gt;(commit) - reverted to old (Verdana) font for the website title&lt;span&quot;&gt;(commit)  2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  ">
+<meta itemprop="description" content=" Changelog 2020-10-05  replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title(commit)  2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  ">
 
 <meta itemprop="wordCount" content="51">
 
@@ -188,7 +188,7 @@
 <h2 id="changelog">Changelog</h2>
 <h3 id="2020-10-05">2020-10-05</h3>
 <ul>
-<li>replaced text font with IBM Plex Mono <sup>&lt;span&quot;&gt;(<a href="https://github.com/ahtrahddis/ahtrahddis.github.io/commit/22a2b188764f8e1a8877b33007caef528772ae98">commit</a>)</span></sup> - reverted to old (Verdana) font for the website title<sup>&lt;span&quot;&gt;(<a href="https://github.com/ahtrahddis/ahtrahddis.github.io/commit/219231749697b97f8ee1bd1a4645bf247f20fda3">commit</a>)</span></sup></li>
+<li>replaced text font with IBM Plex Mono <sup><span>(<a href="https://github.com/ahtrahddis/ahtrahddis.github.io/commit/22a2b188764f8e1a8877b33007caef528772ae98">commit</a>)</span></sup> - reverted to old (Verdana) font for the website title<sup><span>(<a href="https://github.com/ahtrahddis/ahtrahddis.github.io/commit/219231749697b97f8ee1bd1a4645bf247f20fda3">commit</a>)</span></sup></li>
 </ul>
 <h3 id="2020-09-30">2020-09-30</h3>
 <ul>
