--- a/changelog/index.html
+++ b/changelog/index.html
@@ -9,14 +9,14 @@
 <title>changelog | Яeversed Ƨiddhartha</title>
 <meta name="title" content="changelog" />
 <meta name="description" content=" Changelog 2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
-  added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)****
+  added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)
   2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  " />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="changelog" />
 <meta property="og:description" content=" Changelog 2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
-  added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)****
+  added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)
   2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/changelog/" />
@@ -27,14 +27,14 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="changelog"/>
 <meta name="twitter:description" content=" Changelog 2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
-  added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)****
+  added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)
   2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  "/>
 
 
 
 <meta itemprop="name" content="changelog">
 <meta itemprop="description" content=" Changelog 2020-10-05   replaced text font with IBM Plex Mono (commit) - reverted to old (Verdana) font for the website title (commit)
-  added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)****
+  added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link (commit)
   2020-09-30  changed URL from atrahhdis.github.io to ahtrahddis.github.io renamed website to &ldquo;Reversed Siddhartha&rdquo; changed to &ldquo;hugo bear blog&rdquo; theme added &ldquo;A non-mystical explanation of insight meditation and the three characteristics of existence&rdquo;  ">
 
 <meta itemprop="wordCount" content="63">
@@ -200,7 +200,7 @@
 <p>replaced text font with IBM Plex Mono <sup><span>(<a href="https://github.com/ahtrahddis/ahtrahddis.github.io/commit/22a2b188764f8e1a8877b33007caef528772ae98">commit</a>)</span></sup> - reverted to old (Verdana) font for the website title <sup><span>(<a href="https://github.com/ahtrahddis/ahtrahddis.github.io/commit/219231749697b97f8ee1bd1a4645bf247f20fda3">commit</a>)</span></sup></p>
 </li>
 <li>
-<p>added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link <sup><span>(<a href="https://github.com/ahtrahddis/ahtrahddis.github.io/commit/da63241a1fe949e402517610ec99341c7a3bfe91">commit</a>)</span></sup>****</p>
+<p>added John Vervaeke&rsquo;s &ldquo;Awakening from the Meaning of Crisis&rdquo; link <sup><span>(<a href="https://github.com/ahtrahddis/ahtrahddis.github.io/commit/da63241a1fe949e402517610ec99341c7a3bfe91">commit</a>)</span></sup></p>
 </li>
 </ul>
 <h3 id="2020-09-30">2020-09-30</h3>
