--- a/e-book-how-to/index.html
+++ b/e-book-how-to/index.html
@@ -9,17 +9,19 @@
 <title>e-book creation how-to | Яeversed Ƨiddhartha</title>
 <meta name="title" content="e-book creation how-to" />
 <meta name="description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
-  the text is pasted &amp; formatted with / written in / converted to markdown (the conversion is done using various methods) - in rare cases other formats, ie. html, are used
+  the text is pasted &amp; formatted with / written in / converted to markdown (and very rarely to html)
   the markdown (.md) file is converted to epub using pandoc
-  the epub file is edited with calibre and finally&hellip;" />
+  the epub file is edited with calibre and finally&hellip;
+  the epub file is converted to mobi and azw3 with calibre" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="e-book creation how-to" />
 <meta property="og:description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
-  the text is pasted &amp; formatted with / written in / converted to markdown (the conversion is done using various methods) - in rare cases other formats, ie. html, are used
+  the text is pasted &amp; formatted with / written in / converted to markdown (and very rarely to html)
   the markdown (.md) file is converted to epub using pandoc
-  the epub file is edited with calibre and finally&hellip;" />
+  the epub file is edited with calibre and finally&hellip;
+  the epub file is converted to mobi and azw3 with calibre" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/e-book-how-to/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
@@ -29,19 +31,21 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="e-book creation how-to"/>
 <meta name="twitter:description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
-  the text is pasted &amp; formatted with / written in / converted to markdown (the conversion is done using various methods) - in rare cases other formats, ie. html, are used
+  the text is pasted &amp; formatted with / written in / converted to markdown (and very rarely to html)
   the markdown (.md) file is converted to epub using pandoc
-  the epub file is edited with calibre and finally&hellip;"/>
+  the epub file is edited with calibre and finally&hellip;
+  the epub file is converted to mobi and azw3 with calibre"/>
 
 
 
 <meta itemprop="name" content="e-book creation how-to">
 <meta itemprop="description" content="E-book Creation For the creation of all these e-books, the following procedure is followed:
-  the text is pasted &amp; formatted with / written in / converted to markdown (the conversion is done using various methods) - in rare cases other formats, ie. html, are used
+  the text is pasted &amp; formatted with / written in / converted to markdown (and very rarely to html)
   the markdown (.md) file is converted to epub using pandoc
-  the epub file is edited with calibre and finally&hellip;">
+  the epub file is edited with calibre and finally&hellip;
+  the epub file is converted to mobi and azw3 with calibre">
 
-<meta itemprop="wordCount" content="159">
+<meta itemprop="wordCount" content="135">
 
 
 
@@ -201,7 +205,7 @@
 <p>For the creation of all these e-books, the following procedure is followed:</p>
 <ul>
 <li>
-<p>the text is pasted &amp; formatted with / written in / converted to <a href="https://en.wikipedia.org/wiki/Markdown">markdown</a> (the conversion is done using various methods) - in rare cases other formats, ie. html, are used</p>
+<p>the text is pasted &amp; formatted with / written in / converted to <a href="https://en.wikipedia.org/wiki/Markdown">markdown</a> (and very rarely to html)</p>
 </li>
 <li>
 <p>the markdown (<strong>.md</strong>) file is converted to <strong>epub</strong> using <a href="https://pandoc.org/">pandoc</a></p>
@@ -210,19 +214,21 @@
 <p>the <strong>epub</strong> file is edited with <a href="https://calibre-ebook.com/">calibre</a> and finally&hellip;</p>
 </li>
 <li>
-<p>the <strong>epub</strong> file is converted to <strong>mobi</strong> and <strong>azw3</strong> (in <strong>azw3</strong> additional soft hyphenation is applied using <a href="https://www.mobileread.com/forums/showthread.php?t=208534">hyphenate this!</a> module)</p>
+<p>the <strong>epub</strong> file is converted to <strong>mobi</strong> and <strong>azw3</strong> with <a href="https://calibre-ebook.com/">calibre</a></p>
+</li>
+<li>
+<p>for <strong>azw3</strong> files, additional soft hyphenation is added using <a href="https://www.mobileread.com/forums/showthread.php?t=208534">hyphenate this!</a> calibre plugin</p>
 </li>
 </ul>
-<p>For some texts, <strong>pdf</strong> files are provided too. These ones have either been created:</p>
+<p>Note, that for some texts, <strong>pdf</strong> files are provided too. These ones have either been created:</p>
 <ul>
 <li>
 <p>with the &ldquo;quick &lsquo;n dirty&rdquo; method of conversion via calibre, which is a bad solution as there is very little formatting control</p>
 </li>
 <li>
-<p>by exporting the epub to <strong>docx/odt</strong>, applying further editing, formatting and finally exporting to <strong>pdf</strong>.</p>
+<p>by exporting the epub to <strong>docx/odt</strong>, further editing with Libreoffice (and sometimes with MS Office), re-formatting and finally exporting to <strong>pdf</strong></p>
 </li>
 </ul>
-<p>The latter (<a href="https://github.com/atrahhdis/alohadharma/raw/master/ebooks/Aloha%20Dharma:%20a%20compilation%20of%20texts%20from%20alohadharma.com.pdf">example 1</a>, <a href="https://github.com/atrahhdis/medinra/raw/master/ebooks/Meditation%2C%20insight%2C%20and%20rationality%20-%20DavidM.pdf">example 2</a>) is the method I prefer and I will try to provide similar pdfs for most of the texts.</p>
 
 </content>
 <p>
