--- a/dharma/index.html
+++ b/dharma/index.html
@@ -49,7 +49,7 @@
   Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
   Metta (Loving Kindness) from (this post)">
 
-<meta itemprop="wordCount" content="499">
+<meta itemprop="wordCount" content="475">
 
 
 
@@ -207,7 +207,7 @@
   <p> </p>
 <h2 id="practice">Practice</h2>
 <h3 id="how-do-i-start-meditating">How do I start meditating?</h3>
-<p>Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:</p>
+<p>Below you will find a link to a compressed file that includes instructions <strong>in pdf</strong> format for the following techniques:</p>
 <ul>
 <li>
 <p>Mindfulness of Breath (from <a href="https://www.goodreads.com/book/show/25942786-the-mind-illuminated">TMI</a>)</p>
@@ -268,9 +268,6 @@
 <p> </p>
 <h2 id="pragmatic-dharma">Pragmatic Dharma</h2>
 <p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.github.io/pragmatic-dharma/">this link</a>.</p>
-<p> </p>
-<h2 id="note">Note</h2>
-<p>Please note that I&rsquo;m not an expert. I am just a beginner, trying to help fellow meditators that know less than I do.</p>
 
 </content>
 <p>
