--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
   <main>
 <p> </p>
 <h2 id="intro">Intro</h2>
-<p>I&rsquo;m a Buddhist geek.</p>
-<p>I create dharma e-books using <a href="https://en.wikipedia.org/wiki/Markdown">markdown</a>/<a href="https://pandoc.org/">pandoc</a>/<a href="https://pandoc.org/">calibre</a> and I upload them on <a href="https://github.com/ahtrahddis">my github page</a>.</p>
-<p>Below you will find a list with links to these files.</p>
-<p>You can download them in <strong>epub/mobi/azw3</strong> formats (and some of them in pdf) and read them on your e-book device.</p>
+<p><strong>ЯƧ</strong> is a repository of (unofficial) dharma e-books (and more&hellip;).</p>
+<p>They were created using <a href="https://en.wikipedia.org/wiki/Markdown">markdown</a>/<a href="https://pandoc.org/">pandoc</a>/<a href="https://pandoc.org/">calibre</a> and were uploaded on <a href="https://github.com/ahtrahddis">this github page</a>.</p>
+<p>Below you will find an organized list with links to the github repositories of these books.</p>
+<p>You can download them in <strong>epub/mobi/azw3</strong> (and some of them in pdf) formats and read them on your e-book (preferably e-ink) device.</p>
 <p> </p>
 <hr>
 <p> </p>
 <h2 id="mahasi-vipassana-noting-burmese-theravada">Mahasi Vipassana (Noting) (Burmese Theravada)</h2>
-<p>The following links are from a website I have created, <a href="https://mahasivipassana.com">mahasivipassana.com</a> (MVMR):</p>
+<p>The following links are from a sister-website, <a href="https://mahasivipassana.com">mahasivipassana.com</a> (MVMR):</p>
 <ul>
 <li>
 <p><a href="https://mahasivipassana.com/docs/mahasi-qa/">Questions and Answers with Mahasi Sayadaw</a></p>
