--- a/dharma/index.html
+++ b/dharma/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>dharma | Яeversed Ƨiddhartha</title>
 <meta name="title" content="dharma" />
-<meta name="description" content="Practice How do I start meditating? Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
+<meta name="description" content="Practice Meditation instructions for beginners Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
@@ -18,7 +18,7 @@
 
 
 <meta property="og:title" content="dharma" />
-<meta property="og:description" content="Practice How do I start meditating? Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
+<meta property="og:description" content="Practice Meditation instructions for beginners Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
@@ -32,7 +32,7 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="dharma"/>
-<meta name="twitter:description" content="Practice How do I start meditating? Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
+<meta name="twitter:description" content="Practice Meditation instructions for beginners Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
@@ -42,14 +42,14 @@
 
 
 <meta itemprop="name" content="dharma">
-<meta itemprop="description" content="Practice How do I start meditating? Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
+<meta itemprop="description" content="Practice Meditation instructions for beginners Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
   Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
   Metta (Loving Kindness) from (this post)">
 
-<meta itemprop="wordCount" content="475">
+<meta itemprop="wordCount" content="481">
 
 
 
@@ -206,7 +206,7 @@
 <content>
   <p> </p>
 <h2 id="practice">Practice</h2>
-<h3 id="how-do-i-start-meditating">How do I start meditating?</h3>
+<h3 id="meditation-instructions-for-beginners">Meditation instructions for beginners</h3>
 <p>Below you will find a link to a compressed file that includes instructions <strong>in pdf</strong> format for the following techniques:</p>
 <ul>
 <li>
@@ -266,7 +266,7 @@
 <h3 id="are-you-interested-in-all-day-practice">Are you interested in all-day practice?</h3>
 <p>If you are interested in all-day practice, you might want to check <a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a> and <a href="https://ashintejaniya.org/teachings">his teachings</a>.</p>
 <p> </p>
-<h2 id="pragmatic-dharma">Pragmatic Dharma</h2>
+<h2 id="do-you-want-to-know-more-about-pragmatic-dharma">Do you want to know more about &ldquo;Pragmatic Dharma&rdquo;?</h2>
 <p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.github.io/pragmatic-dharma/">this link</a>.</p>
 
 </content>
