--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
   <main>
 <p> </p>
 <h2 id="intro">Intro</h2>
-<p><strong>ЯƧ</strong> is a repository of (unofficial) dharma e-books (and more&hellip;).</p>
+<p><strong>RS</strong> is a repository of (unofficial) dharma e-books (and more..).</p>
 <p>They were created using <a href="https://en.wikipedia.org/wiki/Markdown">markdown</a>/<a href="https://pandoc.org/">pandoc</a>/<a href="https://pandoc.org/">calibre</a> and were uploaded on <a href="https://github.com/ahtrahddis">this github page</a>.</p>
-<p>Below you will find an organized list with links to the github repositories of these books.</p>
-<p>You can download them in <strong>epub/mobi/azw3</strong> (and some of them in pdf) formats and read them on your e-book (preferably e-ink) device.</p>
+<p>Below you will find an organized list with links to the relevant github repositories.</p>
+<p>You can download them in <strong>epub/mobi/azw3</strong> (and some of them in <strong>pdf</strong>) formats and read them on your e-book (preferably e-ink) device.</p>
 <p> </p>
 <hr>
 <p> </p>
