--- a/dharma/index.html
+++ b/dharma/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>dharma | Яeversed Ƨiddhartha</title>
 <meta name="title" content="dharma" />
-<meta name="description" content="Practice Meditation instructions for beginners Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
+<meta name="description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
@@ -18,7 +18,7 @@
 
 
 <meta property="og:title" content="dharma" />
-<meta property="og:description" content="Practice Meditation instructions for beginners Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
+<meta property="og:description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
@@ -32,7 +32,7 @@
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="dharma"/>
-<meta name="twitter:description" content="Practice Meditation instructions for beginners Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
+<meta name="twitter:description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
@@ -42,14 +42,14 @@
 
 
 <meta itemprop="name" content="dharma">
-<meta itemprop="description" content="Practice Meditation instructions for beginners Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
+<meta itemprop="description" content="Practice Meditation instructions for beginners Here, you will get a compressed file that includes instructions in pdf for the following meditation techniques:
   Mindfulness of Breath (from TMI)
   Mahasi Vipassana (Noting) (from this blog)
   Shikantaza (Zazen) (from this e-book)
   Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video)
   Metta (Loving Kindness) from (this post)">
 
-<meta itemprop="wordCount" content="481">
+<meta itemprop="wordCount" content="430">
 
 
 
@@ -207,7 +207,7 @@
   <p> </p>
 <h2 id="practice">Practice</h2>
 <h3 id="meditation-instructions-for-beginners">Meditation instructions for beginners</h3>
-<p>Below you will find a link to a compressed file that includes instructions <strong>in pdf</strong> format for the following techniques:</p>
+<p><a href="/downloads/mip.zip">Here</a>, you will get a compressed file that includes instructions <strong>in pdf</strong> for the following meditation techniques:</p>
 <ul>
 <li>
 <p>Mindfulness of Breath (from <a href="https://www.goodreads.com/book/show/25942786-the-mind-illuminated">TMI</a>)</p>
@@ -225,15 +225,10 @@
 <p>Metta (Loving Kindness) from (<a href="https://web.archive.org/web/20190220215420/https://alohadharma.com/loving-kindness-meditation/">this post</a>)</p>
 </li>
 </ul>
-<h4 id="download">Download</h4>
-<p>To get this pack, use the following link:</p>
-<ul>
-<li><a href="/downloads/mip.zip">Meditation Instructions Pack</a></li>
-</ul>
 <p> </p>
 <h3 id="are-you-a-complete-beginner">Are you a complete beginner?</h3>
-<p>If you don&rsquo;t have any idea what these methods are all about but you &rsquo;re curious to try, just start with the &ldquo;mindfulness of breath&rdquo; instructions.</p>
-<p>In addition to the instructions given in this guide, I suggest that you don&rsquo;t only focus on the breath but you also do breath counting (from 1 to 10 and back), as <a href="https://github.com/atrahhdis/shargrol">Shargrol</a> suggests on the <a href="https://shargrolpostscompilation.blogspot.com/p/blog-page.html#awarenessandcountingofbreath">following text</a>:</p>
+<p>If you don&rsquo;t have any idea what these methods are all about but you &rsquo;re curious to try, just start with  &ldquo;mindfulness of breath&rdquo;.</p>
+<p>In addition to the instructions given above, you can also do some breath counting (from 1 to 10 and back), as <a href="https://github.com/atrahhdis/shargrol">Shargrol</a> suggests on the <a href="https://shargrolpostscompilation.blogspot.com/p/blog-page.html#awarenessandcountingofbreath">following text</a>:</p>
 <blockquote>
 <p>Awareness and counting of breath is a great practice. For what it&rsquo;s worth, a good, practical combination is:</p>
 <ol>
@@ -248,7 +243,7 @@
 </blockquote>
 <p> </p>
 <h3 id="are-you-interested-in-noting">Are you interested in noting?</h3>
-<p>If you have decided to go with noting (which is <a href="https://mahasivipassana.com">Mahasi Sayadaw&rsquo;s Vipassana</a> technique), apart from this nice introductory text included in the above pack, I suggest you to read the following material:</p>
+<p>If you have decided to go with noting (which is <a href="https://mahasivipassana.com">Mahasi Sayadaw&rsquo;s Vipassana</a> technique), apart from theintroductory text included in the above pack, you can also read the following material:</p>
 <ul>
 <li>
 <p><a href="https://mahasivipassana.com/docs/practical-vipassana-meditation-exercises/">Practical Vipassana Meditation Exercises</a></p>
@@ -257,14 +252,13 @@
 <p><a href="https://mahasivipassana.com/docs/practical-insight-meditation-basic-practice/">Practical Insight Meditation: Basic Practice</a></p>
 </li>
 </ul>
-<p>I also suggest you to have a look at this contemporary version of noting by <a href="https://kennethfolkdharma.com">Kenneth Folk</a>:</p>
+<p>You can also have a look at this contemporary noting technique by <a href="https://kennethfolkdharma.com">Kenneth Folk</a>:</p>
 <ul>
 <li><a href="https://mahasivipassana.com/contemporary-noting/#kenneth-folks-detailed-freestyle-noting">Kenneth Folk&rsquo;s Freestyle Noting</a></li>
 </ul>
-<p>Keep in mind that you can actually practise by &ldquo;labeling out loud&rdquo;, as Folk does in these videos. Sometimes, it really helps!</p>
 <p> </p>
 <h3 id="are-you-interested-in-all-day-practice">Are you interested in all-day practice?</h3>
-<p>If you are interested in all-day practice, you might want to check <a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a> and <a href="https://ashintejaniya.org/teachings">his teachings</a>.</p>
+<p>If you are interested in all-day practice, you might want to check <a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a> and <a href="https://ashintejaniya.org/teachings">these freely downloadable texts</a> with his teachings.</p>
 <p> </p>
 <h3 id="do-you-want-to-know-more-about-pragmatic-dharma">Do you want to know more about &ldquo;Pragmatic Dharma&rdquo;?</h3>
 <p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.github.io/pragmatic-dharma/">this link</a>.</p>
