--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 <hr>
 <p> </p>
 <h2 id="mahasi-vipassana-noting-burmese-theravada">Mahasi Vipassana (Noting) (Burmese Theravada)</h2>
-<p>The following links are from a sister-website, <a href="https://mahasivipassana.com">mahasivipassana.com</a> (MVMR):</p>
+<p>The following links go to a sister-website, <a href="https://mahasivipassana.com">mahasivipassana.com</a> (MVMR):</p>
 <ul>
 <li>
 <p><a href="https://mahasivipassana.com/docs/mahasi-qa/">Questions and Answers with Mahasi Sayadaw</a></p>
@@ -215,6 +215,7 @@
 <p><a href="https://mahasivipassana.com/docs/a-r_streamentry-summary-of-mahasi-sayadaws-the-manual-of-insight/">A r/streamentry summary of Mahasi Sayadaw&rsquo;s book &ldquo;The manual of Insight&rdquo;</a></p>
 </li>
 </ul>
+<p>These e-books can also be found on the <a href="https://github.com/ahtrahddis/mahasivipassana">github repository of MVMR</a>.</p>
 <p> </p>
 <hr>
 <p> </p>
