--- a/info/index.html
+++ b/info/index.html
@@ -8,20 +8,20 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>info | Яeversed Ƨiddhartha</title>
 <meta name="title" content="info" />
-<meta name="description" content="Contact If you want to contact me, please send an email to:
+<meta name="description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
+ Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
-If you found a typo or formatting issue or&hellip;. on an e-book apart from sending an email, you can fork the relevant repository, make changes and submit a pull request.
- Changelog In order to read about website changes, new content addiditons etc., visit this link.
- Software This website was created with hugo and hugo bear blog theme." />
+If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
+ Changelog In order to read about website changes, new content addiditons etc." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="info" />
-<meta property="og:description" content="Contact If you want to contact me, please send an email to:
+<meta property="og:description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
+ Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
-If you found a typo or formatting issue or&hellip;. on an e-book apart from sending an email, you can fork the relevant repository, make changes and submit a pull request.
- Changelog In order to read about website changes, new content addiditons etc., visit this link.
- Software This website was created with hugo and hugo bear blog theme." />
+If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
+ Changelog In order to read about website changes, new content addiditons etc." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
@@ -30,22 +30,22 @@ If you found a typo or formatting issue or&hellip;. on an e-book apart from send
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="info"/>
-<meta name="twitter:description" content="Contact If you want to contact me, please send an email to:
+<meta name="twitter:description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
+ Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
-If you found a typo or formatting issue or&hellip;. on an e-book apart from sending an email, you can fork the relevant repository, make changes and submit a pull request.
- Changelog In order to read about website changes, new content addiditons etc., visit this link.
- Software This website was created with hugo and hugo bear blog theme."/>
+If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
+ Changelog In order to read about website changes, new content addiditons etc."/>
 
 
 
 <meta itemprop="name" content="info">
-<meta itemprop="description" content="Contact If you want to contact me, please send an email to:
+<meta itemprop="description" content="Who Am I? I&rsquo;m just a beginner Buddhist g{r}eek.
+ Contact If you want to contact me, please send an email to:
 ns |at| mahasivipassana |dot| com
-If you found a typo or formatting issue or&hellip;. on an e-book apart from sending an email, you can fork the relevant repository, make changes and submit a pull request.
- Changelog In order to read about website changes, new content addiditons etc., visit this link.
- Software This website was created with hugo and hugo bear blog theme.">
+If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.
+ Changelog In order to read about website changes, new content addiditons etc.">
 
-<meta itemprop="wordCount" content="74">
+<meta itemprop="wordCount" content="87">
 
 
 
@@ -200,11 +200,13 @@ If you found a typo or formatting issue or&hellip;. on an e-book apart from send
   <main>
 
 <content>
-  <p> </p>
+  <h2 id="who-am-i">Who Am I?</h2>
+<p>I&rsquo;m just a beginner Buddhist g{r}eek.</p>
+<p> </p>
 <h2 id="contact">Contact</h2>
 <p>If you want to contact me, please send an email to:</p>
 <p><code>ns |at| mahasivipassana |dot| com</code></p>
-<p>If you found a typo or formatting issue or&hellip;. on an e-book apart from sending an email, you can fork the relevant repository, make changes and submit a pull request.</p>
+<p>If you found a typo or wrong formatting or any other issue on an e-book, apart from sending an email, you can fork the relevant github repository, make changes and submit a pull request.</p>
 <p> </p>
 <h2 id="changelog">Changelog</h2>
 <p>In order to read about website changes, new content addiditons etc., visit <a href="https://ahtrahddis.github.io/changelog/">this link</a>.</p>
